# learn_rust_with_bugs

./: .gitignore  Cargo.toml
archive/: Cargo.toml
archive/01-ownership/src/: main.rs
archive/02-borrowing/src/: main.rs
archive/03-slices/src/: main.rs
archive/04-lifetimes/src/: main.rs
archive/05-mixed/src/: main.rs
archive_2/: iterator_invalidation.js
archive_2/01-ownership-deep/: Cargo.toml
archive_2/01-ownership-deep/src/: main.rs
archive_2/02-borrowing-deep/: Cargo.toml
archive_2/02-borrowing-deep/src/: main.rs
archive_2/03-slices-deep/: Cargo.toml
archive_2/03-slices-deep/src/: main.rs
archive_2/04-lifetimes-deep/: Cargo.toml
archive_2/04-lifetimes-deep/src/: main.rs
archive_2/05-structs-lifetimes/: Cargo.toml
archive_2/05-structs-lifetimes/src/: main.rs
archive_2/06-rc-arc/: Cargo.toml
archive_2/06-rc-arc/src/: main.rs
archive_2/07-cell-refcell/src/: main.rs
archive_2/08-mutex-threading/: Cargo.toml
archive_2/08-mutex-threading/src/: main.rs
archive_2/09-trait-objects/src/: main.rs
archive_2/10-generics-deep/: Cargo.toml  Cargo.toml.bak
archive_2/10-generics-deep/src/: main.rs
archive_2/11-unsafe-rust/: Cargo.toml.bak
archive_2/11-unsafe-rust/src/: main.rs
archive_2/12-interview-practice/: Cargo.toml  Cargo.toml.bak
archive_2/12-interview-practice/src/: main.rs
src/: main.rs
